# testcontainers-rs-modules-community

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile  rustfmt.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: anvil.rs  azurite.rs  fakecloud.rs  localstack.rs  mongo.rs  mssql_server.rs  nats.rs  neo4j.rs  openldap.rs  postgres.rs  rqlite.rs  selenium.rs  surrealdb.rs  zitadel.rs
src/: lib.rs
src/anvil/: mod.rs
src/arrow_flightsql/: mod.rs
src/azurite/: mod.rs
src/cassandra/: mod.rs
src/clickhouse/: mod.rs
src/cncf_distribution/: mod.rs
src/coblox_bitcoincore/: mod.rs
src/cockroach_db/: mod.rs
src/consul/: mod.rs
src/cratedb/: mod.rs
src/databend/: mod.rs
src/dex/: config.rs  mod.rs
src/dynamodb_local/: mod.rs
src/elastic_search/: mod.rs
src/elasticmq/: mod.rs
src/fakecloud/: mod.rs
src/gitea/: app.ini  mod.rs
src/google_cloud_sdk_emulators/: mod.rs
src/hashicorp_vault/: mod.rs
src/hickory_dns/: mod.rs
src/k3s/: mod.rs
src/kafka/: apache.rs  confluent.rs  mod.rs
src/kwok/: mod.rs
src/localstack/: mod.rs  pro.rs
src/mariadb/: mod.rs
src/meilisearch/: mod.rs
src/minio/: mod.rs
src/mongo/: mod.rs  replset.rs  standalong.rs
src/mosquitto/: mod.rs
src/mssql_server/: mod.rs
src/mysql/: mod.rs
src/nats/: mod.rs
src/neo4j/: mod.rs
src/openldap/: README.md  create_certs.sh  mod.rs
src/oracle/: free.rs  mod.rs
src/orientdb/: mod.rs
src/parity_parity/: mod.rs
src/postgres/: mod.rs
src/pulsar/: mod.rs
src/rabbitmq/: mod.rs
src/redis/: default.rs  mod.rs  stack.rs  standalone.rs
src/rqlite/: mod.rs
src/rustfs/: mod.rs
src/scylladb/: mod.rs
src/selenium/: mod.rs
src/solr/: mod.rs
src/surrealdb/: mod.rs
src/trufflesuite_ganachecli/: mod.rs
src/valkey/: mod.rs
src/victoria_metrics/: mod.rs
src/victoriametrics/: mod.rs
src/weaviate/: mod.rs
src/zitadel/: mod.rs
src/zookeeper/: mod.rs
