[package]
name = "testcontainers-modules"
version = "0.8.0"
description = "Community maintained modules for Testcontainers for Rust"
categories = ["development-tools::testing"]
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/testcontainers/testcontainers-rs-modules-community"
keywords = ["docker", "testcontainers"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
blocking = ["testcontainers/blocking"]
watchdog = ["testcontainers/watchdog"]
http_wait = ["testcontainers/http_wait"]
clickhouse = ["http_wait"]
cncf_distribution = []
consul = []
dynamodb = []
elastic_search = []
elasticmq = []
google_cloud_sdk_emulators = []
hashicorp_vault = []
k3s = []
kafka = []
localstack = []
mariadb = []
meilisearch = []
minio = []
mongo = []
mosquitto = []
mssql_server = []
mysql = []
nats = []
neo4j = []
oracle = []
orientdb = []
parity = []
postgres = []
rabbitmq = []
redis = []
solr = []
surrealdb = []
trufflesuite_ganachecli = []
victoria_metrics = []
zookeeper = []
cockroach_db = []
kwok = []

[dependencies]
testcontainers = { version = "0.21.0" }


[dev-dependencies]
async-nats = "0.35.0"
aws-config = "1.0.1"
aws-sdk-dynamodb = "1.2.0"
aws-sdk-s3 = "1.2.0"
aws-sdk-sqs = "1.2.0"
aws-types = "1.0.1"
bollard = "0.17.0"
futures = "0.3"
lapin = "2.3.1"
meilisearch-sdk = "0.26.1"
mongodb = "3.0.1"
mysql = "25.0.0"
neo4rs = "0.7.0"
oracle = "0.6.0"
postgres = "0.19.7"
pretty_env_logger = "0.5.0"
rdkafka = "0.36.0"
redis = { version = "0.25.0", features = ["json"] }
reqwest = { version = "0.12.5", features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots"], default-features = false }
retry = "2.0.0"
rustls = { version = "0.23.2", features = ["ring"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
surrealdb = { version = "1.2.0" }
tar = "0.4.40"
testcontainers = { version = "0.21.0", features = ["blocking"] }
# To use Tiberius on macOS, rustls is needed instead of native-tls
# https://github.com/prisma/tiberius/tree/v0.12.2#encryption-tlsssl
tiberius = { version = "0.12.2", default-features = false, features = [
    "tds73",
    "rustls",
] }
tokio = { version = "1", features = ["macros"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
zookeeper-client = { version = "0.8.0" }
kube = { version = "0.90.0", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.21.1", features = ["v1_29"] }
clickhouse = "0.11.6"
vaultrs = "0.7.2"

[[example]]
name = "postgres"
required-features = ["postgres"]

[[example]]
name = "localstack"
required-features = ["localstack"]

[[example]]
name = "neo4j"
required-features = ["neo4j"]

[[example]]
name = "mssql_server"
required-features = ["mssql_server"]

[[example]]
name = "surrealdb"
required-features = ["surrealdb"]
